name:                  amazonka-glue
version:               1.6.1
synopsis:              Amazon Glue SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Glue" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-glue

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Glue
        , Network.AWS.Glue.BatchCreatePartition
        , Network.AWS.Glue.BatchDeleteConnection
        , Network.AWS.Glue.BatchDeletePartition
        , Network.AWS.Glue.BatchDeleteTable
        , Network.AWS.Glue.BatchDeleteTableVersion
        , Network.AWS.Glue.BatchGetPartition
        , Network.AWS.Glue.BatchStopJobRun
        , Network.AWS.Glue.CreateClassifier
        , Network.AWS.Glue.CreateConnection
        , Network.AWS.Glue.CreateCrawler
        , Network.AWS.Glue.CreateDatabase
        , Network.AWS.Glue.CreateDevEndpoint
        , Network.AWS.Glue.CreateJob
        , Network.AWS.Glue.CreatePartition
        , Network.AWS.Glue.CreateScript
        , Network.AWS.Glue.CreateTable
        , Network.AWS.Glue.CreateTrigger
        , Network.AWS.Glue.CreateUserDefinedFunction
        , Network.AWS.Glue.DeleteClassifier
        , Network.AWS.Glue.DeleteConnection
        , Network.AWS.Glue.DeleteCrawler
        , Network.AWS.Glue.DeleteDatabase
        , Network.AWS.Glue.DeleteDevEndpoint
        , Network.AWS.Glue.DeleteJob
        , Network.AWS.Glue.DeletePartition
        , Network.AWS.Glue.DeleteTable
        , Network.AWS.Glue.DeleteTableVersion
        , Network.AWS.Glue.DeleteTrigger
        , Network.AWS.Glue.DeleteUserDefinedFunction
        , Network.AWS.Glue.GetCatalogImportStatus
        , Network.AWS.Glue.GetClassifier
        , Network.AWS.Glue.GetClassifiers
        , Network.AWS.Glue.GetConnection
        , Network.AWS.Glue.GetConnections
        , Network.AWS.Glue.GetCrawler
        , Network.AWS.Glue.GetCrawlerMetrics
        , Network.AWS.Glue.GetCrawlers
        , Network.AWS.Glue.GetDatabase
        , Network.AWS.Glue.GetDatabases
        , Network.AWS.Glue.GetDataflowGraph
        , Network.AWS.Glue.GetDevEndpoint
        , Network.AWS.Glue.GetDevEndpoints
        , Network.AWS.Glue.GetJob
        , Network.AWS.Glue.GetJobRun
        , Network.AWS.Glue.GetJobRuns
        , Network.AWS.Glue.GetJobs
        , Network.AWS.Glue.GetMapping
        , Network.AWS.Glue.GetPartition
        , Network.AWS.Glue.GetPartitions
        , Network.AWS.Glue.GetPlan
        , Network.AWS.Glue.GetTable
        , Network.AWS.Glue.GetTableVersion
        , Network.AWS.Glue.GetTableVersions
        , Network.AWS.Glue.GetTables
        , Network.AWS.Glue.GetTrigger
        , Network.AWS.Glue.GetTriggers
        , Network.AWS.Glue.GetUserDefinedFunction
        , Network.AWS.Glue.GetUserDefinedFunctions
        , Network.AWS.Glue.ImportCatalogToGlue
        , Network.AWS.Glue.ResetJobBookmark
        , Network.AWS.Glue.StartCrawler
        , Network.AWS.Glue.StartCrawlerSchedule
        , Network.AWS.Glue.StartJobRun
        , Network.AWS.Glue.StartTrigger
        , Network.AWS.Glue.StopCrawler
        , Network.AWS.Glue.StopCrawlerSchedule
        , Network.AWS.Glue.StopTrigger
        , Network.AWS.Glue.Types
        , Network.AWS.Glue.UpdateClassifier
        , Network.AWS.Glue.UpdateConnection
        , Network.AWS.Glue.UpdateCrawler
        , Network.AWS.Glue.UpdateCrawlerSchedule
        , Network.AWS.Glue.UpdateDatabase
        , Network.AWS.Glue.UpdateDevEndpoint
        , Network.AWS.Glue.UpdateJob
        , Network.AWS.Glue.UpdatePartition
        , Network.AWS.Glue.UpdateTable
        , Network.AWS.Glue.UpdateTrigger
        , Network.AWS.Glue.UpdateUserDefinedFunction
        , Network.AWS.Glue.Waiters

    other-modules:
          Network.AWS.Glue.Types.Action
        , Network.AWS.Glue.Types.BatchStopJobRunError
        , Network.AWS.Glue.Types.BatchStopJobRunSuccessfulSubmission
        , Network.AWS.Glue.Types.CatalogEntry
        , Network.AWS.Glue.Types.CatalogImportStatus
        , Network.AWS.Glue.Types.Classifier
        , Network.AWS.Glue.Types.CodeGenEdge
        , Network.AWS.Glue.Types.CodeGenNode
        , Network.AWS.Glue.Types.CodeGenNodeArg
        , Network.AWS.Glue.Types.Column
        , Network.AWS.Glue.Types.Condition
        , Network.AWS.Glue.Types.Connection
        , Network.AWS.Glue.Types.ConnectionInput
        , Network.AWS.Glue.Types.ConnectionPropertyKey
        , Network.AWS.Glue.Types.ConnectionType
        , Network.AWS.Glue.Types.ConnectionsList
        , Network.AWS.Glue.Types.Crawler
        , Network.AWS.Glue.Types.CrawlerMetrics
        , Network.AWS.Glue.Types.CrawlerState
        , Network.AWS.Glue.Types.CrawlerTargets
        , Network.AWS.Glue.Types.CreateGrokClassifierRequest
        , Network.AWS.Glue.Types.CreateJSONClassifierRequest
        , Network.AWS.Glue.Types.CreateXMLClassifierRequest
        , Network.AWS.Glue.Types.Database
        , Network.AWS.Glue.Types.DatabaseInput
        , Network.AWS.Glue.Types.DeleteBehavior
        , Network.AWS.Glue.Types.DevEndpoint
        , Network.AWS.Glue.Types.DevEndpointCustomLibraries
        , Network.AWS.Glue.Types.ErrorDetail
        , Network.AWS.Glue.Types.ExecutionProperty
        , Network.AWS.Glue.Types.GetConnectionsFilter
        , Network.AWS.Glue.Types.GrokClassifier
        , Network.AWS.Glue.Types.JSONClassifier
        , Network.AWS.Glue.Types.JdbcTarget
        , Network.AWS.Glue.Types.Job
        , Network.AWS.Glue.Types.JobBookmarkEntry
        , Network.AWS.Glue.Types.JobCommand
        , Network.AWS.Glue.Types.JobRun
        , Network.AWS.Glue.Types.JobRunState
        , Network.AWS.Glue.Types.JobUpdate
        , Network.AWS.Glue.Types.Language
        , Network.AWS.Glue.Types.LastCrawlInfo
        , Network.AWS.Glue.Types.LastCrawlStatus
        , Network.AWS.Glue.Types.Location
        , Network.AWS.Glue.Types.Logical
        , Network.AWS.Glue.Types.LogicalOperator
        , Network.AWS.Glue.Types.MappingEntry
        , Network.AWS.Glue.Types.Order
        , Network.AWS.Glue.Types.Partition
        , Network.AWS.Glue.Types.PartitionError
        , Network.AWS.Glue.Types.PartitionInput
        , Network.AWS.Glue.Types.PartitionValueList
        , Network.AWS.Glue.Types.PhysicalConnectionRequirements
        , Network.AWS.Glue.Types.Predecessor
        , Network.AWS.Glue.Types.Predicate
        , Network.AWS.Glue.Types.PrincipalType
        , Network.AWS.Glue.Types.Product
        , Network.AWS.Glue.Types.ResourceType
        , Network.AWS.Glue.Types.ResourceURI
        , Network.AWS.Glue.Types.S3Target
        , Network.AWS.Glue.Types.Schedule
        , Network.AWS.Glue.Types.ScheduleState
        , Network.AWS.Glue.Types.SchemaChangePolicy
        , Network.AWS.Glue.Types.Segment
        , Network.AWS.Glue.Types.SerDeInfo
        , Network.AWS.Glue.Types.SkewedInfo
        , Network.AWS.Glue.Types.StorageDescriptor
        , Network.AWS.Glue.Types.Table
        , Network.AWS.Glue.Types.TableError
        , Network.AWS.Glue.Types.TableInput
        , Network.AWS.Glue.Types.TableVersion
        , Network.AWS.Glue.Types.TableVersionError
        , Network.AWS.Glue.Types.Trigger
        , Network.AWS.Glue.Types.TriggerState
        , Network.AWS.Glue.Types.TriggerType
        , Network.AWS.Glue.Types.TriggerUpdate
        , Network.AWS.Glue.Types.UpdateBehavior
        , Network.AWS.Glue.Types.UpdateGrokClassifierRequest
        , Network.AWS.Glue.Types.UpdateJSONClassifierRequest
        , Network.AWS.Glue.Types.UpdateXMLClassifierRequest
        , Network.AWS.Glue.Types.UserDefinedFunction
        , Network.AWS.Glue.Types.UserDefinedFunctionInput
        , Network.AWS.Glue.Types.XMLClassifier

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-glue-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Glue
        , Test.AWS.Gen.Glue
        , Test.AWS.Glue.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-glue
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
