name:                  amazonka-lightsail
version:               1.6.1
synopsis:              Amazon Lightsail SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Lightsail" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-lightsail

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Lightsail
        , Network.AWS.Lightsail.AllocateStaticIP
        , Network.AWS.Lightsail.AttachDisk
        , Network.AWS.Lightsail.AttachInstancesToLoadBalancer
        , Network.AWS.Lightsail.AttachLoadBalancerTLSCertificate
        , Network.AWS.Lightsail.AttachStaticIP
        , Network.AWS.Lightsail.CloseInstancePublicPorts
        , Network.AWS.Lightsail.CopySnapshot
        , Network.AWS.Lightsail.CreateCloudFormationStack
        , Network.AWS.Lightsail.CreateContactMethod
        , Network.AWS.Lightsail.CreateDisk
        , Network.AWS.Lightsail.CreateDiskFromSnapshot
        , Network.AWS.Lightsail.CreateDiskSnapshot
        , Network.AWS.Lightsail.CreateDomain
        , Network.AWS.Lightsail.CreateDomainEntry
        , Network.AWS.Lightsail.CreateInstanceSnapshot
        , Network.AWS.Lightsail.CreateInstances
        , Network.AWS.Lightsail.CreateInstancesFromSnapshot
        , Network.AWS.Lightsail.CreateKeyPair
        , Network.AWS.Lightsail.CreateLoadBalancer
        , Network.AWS.Lightsail.CreateLoadBalancerTLSCertificate
        , Network.AWS.Lightsail.CreateRelationalDatabase
        , Network.AWS.Lightsail.CreateRelationalDatabaseFromSnapshot
        , Network.AWS.Lightsail.CreateRelationalDatabaseSnapshot
        , Network.AWS.Lightsail.DeleteAlarm
        , Network.AWS.Lightsail.DeleteAutoSnapshot
        , Network.AWS.Lightsail.DeleteContactMethod
        , Network.AWS.Lightsail.DeleteDisk
        , Network.AWS.Lightsail.DeleteDiskSnapshot
        , Network.AWS.Lightsail.DeleteDomain
        , Network.AWS.Lightsail.DeleteDomainEntry
        , Network.AWS.Lightsail.DeleteInstance
        , Network.AWS.Lightsail.DeleteInstanceSnapshot
        , Network.AWS.Lightsail.DeleteKeyPair
        , Network.AWS.Lightsail.DeleteKnownHostKeys
        , Network.AWS.Lightsail.DeleteLoadBalancer
        , Network.AWS.Lightsail.DeleteLoadBalancerTLSCertificate
        , Network.AWS.Lightsail.DeleteRelationalDatabase
        , Network.AWS.Lightsail.DeleteRelationalDatabaseSnapshot
        , Network.AWS.Lightsail.DetachDisk
        , Network.AWS.Lightsail.DetachInstancesFromLoadBalancer
        , Network.AWS.Lightsail.DetachStaticIP
        , Network.AWS.Lightsail.DisableAddOn
        , Network.AWS.Lightsail.DownloadDefaultKeyPair
        , Network.AWS.Lightsail.EnableAddOn
        , Network.AWS.Lightsail.ExportSnapshot
        , Network.AWS.Lightsail.GetActiveNames
        , Network.AWS.Lightsail.GetAlarms
        , Network.AWS.Lightsail.GetAutoSnapshots
        , Network.AWS.Lightsail.GetBlueprints
        , Network.AWS.Lightsail.GetBundles
        , Network.AWS.Lightsail.GetCloudFormationStackRecords
        , Network.AWS.Lightsail.GetContactMethods
        , Network.AWS.Lightsail.GetDisk
        , Network.AWS.Lightsail.GetDiskSnapshot
        , Network.AWS.Lightsail.GetDiskSnapshots
        , Network.AWS.Lightsail.GetDisks
        , Network.AWS.Lightsail.GetDomain
        , Network.AWS.Lightsail.GetDomains
        , Network.AWS.Lightsail.GetExportSnapshotRecords
        , Network.AWS.Lightsail.GetInstance
        , Network.AWS.Lightsail.GetInstanceAccessDetails
        , Network.AWS.Lightsail.GetInstanceMetricData
        , Network.AWS.Lightsail.GetInstancePortStates
        , Network.AWS.Lightsail.GetInstanceSnapshot
        , Network.AWS.Lightsail.GetInstanceSnapshots
        , Network.AWS.Lightsail.GetInstanceState
        , Network.AWS.Lightsail.GetInstances
        , Network.AWS.Lightsail.GetKeyPair
        , Network.AWS.Lightsail.GetKeyPairs
        , Network.AWS.Lightsail.GetLoadBalancer
        , Network.AWS.Lightsail.GetLoadBalancerMetricData
        , Network.AWS.Lightsail.GetLoadBalancerTLSCertificates
        , Network.AWS.Lightsail.GetLoadBalancers
        , Network.AWS.Lightsail.GetOperation
        , Network.AWS.Lightsail.GetOperations
        , Network.AWS.Lightsail.GetOperationsForResource
        , Network.AWS.Lightsail.GetRegions
        , Network.AWS.Lightsail.GetRelationalDatabase
        , Network.AWS.Lightsail.GetRelationalDatabaseBlueprints
        , Network.AWS.Lightsail.GetRelationalDatabaseBundles
        , Network.AWS.Lightsail.GetRelationalDatabaseEvents
        , Network.AWS.Lightsail.GetRelationalDatabaseLogEvents
        , Network.AWS.Lightsail.GetRelationalDatabaseLogStreams
        , Network.AWS.Lightsail.GetRelationalDatabaseMasterUserPassword
        , Network.AWS.Lightsail.GetRelationalDatabaseMetricData
        , Network.AWS.Lightsail.GetRelationalDatabaseParameters
        , Network.AWS.Lightsail.GetRelationalDatabaseSnapshot
        , Network.AWS.Lightsail.GetRelationalDatabaseSnapshots
        , Network.AWS.Lightsail.GetRelationalDatabases
        , Network.AWS.Lightsail.GetStaticIP
        , Network.AWS.Lightsail.GetStaticIPs
        , Network.AWS.Lightsail.ImportKeyPair
        , Network.AWS.Lightsail.IsVPCPeered
        , Network.AWS.Lightsail.OpenInstancePublicPorts
        , Network.AWS.Lightsail.PeerVPC
        , Network.AWS.Lightsail.PutAlarm
        , Network.AWS.Lightsail.PutInstancePublicPorts
        , Network.AWS.Lightsail.RebootInstance
        , Network.AWS.Lightsail.RebootRelationalDatabase
        , Network.AWS.Lightsail.ReleaseStaticIP
        , Network.AWS.Lightsail.SendContactMethodVerification
        , Network.AWS.Lightsail.StartInstance
        , Network.AWS.Lightsail.StartRelationalDatabase
        , Network.AWS.Lightsail.StopInstance
        , Network.AWS.Lightsail.StopRelationalDatabase
        , Network.AWS.Lightsail.TagResource
        , Network.AWS.Lightsail.TestAlarm
        , Network.AWS.Lightsail.Types
        , Network.AWS.Lightsail.UnpeerVPC
        , Network.AWS.Lightsail.UntagResource
        , Network.AWS.Lightsail.UpdateDomainEntry
        , Network.AWS.Lightsail.UpdateLoadBalancerAttribute
        , Network.AWS.Lightsail.UpdateRelationalDatabase
        , Network.AWS.Lightsail.UpdateRelationalDatabaseParameters
        , Network.AWS.Lightsail.Waiters

    other-modules:
          Network.AWS.Lightsail.Types.AccessDirection
        , Network.AWS.Lightsail.Types.AddOn
        , Network.AWS.Lightsail.Types.AddOnRequest
        , Network.AWS.Lightsail.Types.AddOnType
        , Network.AWS.Lightsail.Types.Alarm
        , Network.AWS.Lightsail.Types.AlarmState
        , Network.AWS.Lightsail.Types.AttachedDisk
        , Network.AWS.Lightsail.Types.AutoSnapshotAddOnRequest
        , Network.AWS.Lightsail.Types.AutoSnapshotDetails
        , Network.AWS.Lightsail.Types.AutoSnapshotStatus
        , Network.AWS.Lightsail.Types.AvailabilityZone
        , Network.AWS.Lightsail.Types.Blueprint
        , Network.AWS.Lightsail.Types.BlueprintType
        , Network.AWS.Lightsail.Types.Bundle
        , Network.AWS.Lightsail.Types.CloudFormationStackRecord
        , Network.AWS.Lightsail.Types.CloudFormationStackRecordSourceInfo
        , Network.AWS.Lightsail.Types.CloudFormationStackRecordSourceType
        , Network.AWS.Lightsail.Types.ComparisonOperator
        , Network.AWS.Lightsail.Types.ContactMethod
        , Network.AWS.Lightsail.Types.ContactMethodStatus
        , Network.AWS.Lightsail.Types.ContactMethodVerificationProtocol
        , Network.AWS.Lightsail.Types.ContactProtocol
        , Network.AWS.Lightsail.Types.DestinationInfo
        , Network.AWS.Lightsail.Types.Disk
        , Network.AWS.Lightsail.Types.DiskInfo
        , Network.AWS.Lightsail.Types.DiskMap
        , Network.AWS.Lightsail.Types.DiskSnapshot
        , Network.AWS.Lightsail.Types.DiskSnapshotInfo
        , Network.AWS.Lightsail.Types.DiskSnapshotState
        , Network.AWS.Lightsail.Types.DiskState
        , Network.AWS.Lightsail.Types.Domain
        , Network.AWS.Lightsail.Types.DomainEntry
        , Network.AWS.Lightsail.Types.ExportSnapshotRecord
        , Network.AWS.Lightsail.Types.ExportSnapshotRecordSourceInfo
        , Network.AWS.Lightsail.Types.ExportSnapshotRecordSourceType
        , Network.AWS.Lightsail.Types.HostKeyAttributes
        , Network.AWS.Lightsail.Types.Instance
        , Network.AWS.Lightsail.Types.InstanceAccessDetails
        , Network.AWS.Lightsail.Types.InstanceAccessProtocol
        , Network.AWS.Lightsail.Types.InstanceEntry
        , Network.AWS.Lightsail.Types.InstanceHardware
        , Network.AWS.Lightsail.Types.InstanceHealthReason
        , Network.AWS.Lightsail.Types.InstanceHealthState
        , Network.AWS.Lightsail.Types.InstanceHealthSummary
        , Network.AWS.Lightsail.Types.InstanceMetricName
        , Network.AWS.Lightsail.Types.InstanceNetworking
        , Network.AWS.Lightsail.Types.InstancePlatform
        , Network.AWS.Lightsail.Types.InstancePortInfo
        , Network.AWS.Lightsail.Types.InstancePortState
        , Network.AWS.Lightsail.Types.InstanceSnapshot
        , Network.AWS.Lightsail.Types.InstanceSnapshotInfo
        , Network.AWS.Lightsail.Types.InstanceSnapshotState
        , Network.AWS.Lightsail.Types.InstanceState
        , Network.AWS.Lightsail.Types.KeyPair
        , Network.AWS.Lightsail.Types.LoadBalancer
        , Network.AWS.Lightsail.Types.LoadBalancerAttributeName
        , Network.AWS.Lightsail.Types.LoadBalancerMetricName
        , Network.AWS.Lightsail.Types.LoadBalancerProtocol
        , Network.AWS.Lightsail.Types.LoadBalancerState
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificate
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateDomainStatus
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateDomainValidationOption
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateDomainValidationRecord
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateFailureReason
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateRenewalStatus
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateRenewalSummary
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateRevocationReason
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateStatus
        , Network.AWS.Lightsail.Types.LoadBalancerTLSCertificateSummary
        , Network.AWS.Lightsail.Types.LogEvent
        , Network.AWS.Lightsail.Types.MetricDatapoint
        , Network.AWS.Lightsail.Types.MetricName
        , Network.AWS.Lightsail.Types.MetricStatistic
        , Network.AWS.Lightsail.Types.MetricUnit
        , Network.AWS.Lightsail.Types.MonitoredResourceInfo
        , Network.AWS.Lightsail.Types.MonthlyTransfer
        , Network.AWS.Lightsail.Types.NetworkProtocol
        , Network.AWS.Lightsail.Types.Operation
        , Network.AWS.Lightsail.Types.OperationStatus
        , Network.AWS.Lightsail.Types.OperationType
        , Network.AWS.Lightsail.Types.PasswordData
        , Network.AWS.Lightsail.Types.PendingMaintenanceAction
        , Network.AWS.Lightsail.Types.PendingModifiedRelationalDatabaseValues
        , Network.AWS.Lightsail.Types.PortAccessType
        , Network.AWS.Lightsail.Types.PortInfo
        , Network.AWS.Lightsail.Types.PortInfoSourceType
        , Network.AWS.Lightsail.Types.PortState
        , Network.AWS.Lightsail.Types.Product
        , Network.AWS.Lightsail.Types.RecordState
        , Network.AWS.Lightsail.Types.RegionInfo
        , Network.AWS.Lightsail.Types.RegionName
        , Network.AWS.Lightsail.Types.RelationalDatabase
        , Network.AWS.Lightsail.Types.RelationalDatabaseBlueprint
        , Network.AWS.Lightsail.Types.RelationalDatabaseBundle
        , Network.AWS.Lightsail.Types.RelationalDatabaseEndpoint
        , Network.AWS.Lightsail.Types.RelationalDatabaseEngine
        , Network.AWS.Lightsail.Types.RelationalDatabaseEvent
        , Network.AWS.Lightsail.Types.RelationalDatabaseHardware
        , Network.AWS.Lightsail.Types.RelationalDatabaseMetricName
        , Network.AWS.Lightsail.Types.RelationalDatabaseParameter
        , Network.AWS.Lightsail.Types.RelationalDatabasePasswordVersion
        , Network.AWS.Lightsail.Types.RelationalDatabaseSnapshot
        , Network.AWS.Lightsail.Types.ResourceLocation
        , Network.AWS.Lightsail.Types.ResourceType
        , Network.AWS.Lightsail.Types.StaticIP
        , Network.AWS.Lightsail.Types.Tag
        , Network.AWS.Lightsail.Types.TreatMissingData

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-lightsail-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Lightsail
        , Test.AWS.Gen.Lightsail
        , Test.AWS.Lightsail.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-lightsail
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
